@@ -23,7 +23,7 @@ name: App-ClusterSSH
 provides:
   App::ClusterSSH:
     file: lib/App/ClusterSSH.pm
-    version: 4.01_04
+    version: 4.01_05
   App::ClusterSSH::Base:
     file: lib/App/ClusterSSH/Base.pm
     version: 0.02
@@ -59,4 +59,4 @@ resources:
   x_Repository:
     - http://clusterssh.git.sourceforge.net/
     - http://github.com/duncs/clusterssh
-version: 4.01_04
+version: 4.01_05
