@@ -1,4 +1,9 @@
-2013-??-?? Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_04
+2013-03-05 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_05
+- New option (-m, --unique-servers) to remove repeated servers when openeing terminals (Thanks to Oliver Meissner)
+- Drop MYMETA.yml and .json files from the distribution
+- Do not set default user name to prevent overriding ssh configuration
+
+2013-02-26 Duncan Ferguson <duncan_ferguson@user.sf.net> - v4.01_04
 - Fixed 'ccon' not calling the correct command (Sf bug 3605002)
 - Fixed clusters not being defined correctly within the .clusterssh/config file (Sf bug 3605675)
 
